group api routes by protocol
